# solana-conviction-markets

./: .gitignore  Anchor.toml  Arcium.toml  README.md  concurrency-issue.md  package-lock.json  package.json  test.sh  tsconfig.json
demo-app/: next.config.mjs  package.json
demo-app/app/: globals.css  layout.tsx  page.tsx
demo-app/components/: add-option-dialog.tsx  create-market-dialog.tsx  market-detail.tsx  market-initializing.tsx  markets-dashboard.tsx  token-swap.tsx  vote-dialog.tsx  wallet-guard.tsx  wallet-provider.tsx
demo-app/db/: schema.ts
demo-app/hooks/: use-add-market-option.ts  use-buy-shares.ts  use-buy-vote-tokens.ts  use-claim-reward.ts  use-create-market.ts  use-derive-x25519.ts  use-open-market.ts  use-reveal-shares.ts  use-select-option.ts  use-sol-balance.ts  (+3 more)
docs/: market-life-cycle.md
encrypted-ixs/: Cargo.toml
js/: README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
programs/conviction_market/: Cargo.toml
programs/conviction_market/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/conviction_market/src/instructions/: add_market_option.rs  buy_market_shares.rs  claim_vote_tokens.rs  close_share_account.rs  create_market.rs  increment_option_tally.rs  init_comp_defs.rs  init_vote_token_account.rs  mint_vote_tokens.rs  mod.rs  open_market.rs  reveal_shares.rs  select_option.rs
scripts/: .env.example  centralState.json  compute-arcium-addresses.ts  compute-defs.ts  create-central-state.ts  create-market.ts  create-token-mint.ts  deploy.sh  example-x25519-keypair.json  fetch-mxe-pubkey.ts  init-compute-defs.ts  market.json  test-open-market.ts
tests/: conviction.ts  eta.test.ts  kit.ts  market.test.ts  run.test.ts  sealed_bid_auction.ts  setup.ts  vta.test.ts
(+134 files in other folders)
