[package]
name = "conviction_market"
version = "0.1.0"
description = "Conviction voting market with encrypted votes using Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "conviction_market"

[features]
default = ["hosted-compdefs"]
cesscpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
hosted-compdefs = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "0.6.3" }
arcium-macros = "0.6.3"
arcium-anchor = "0.6.3"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
